# robot_arm_workcell_manager

./: CMakeLists.txt  README.md  ccpp.yml  package.xml
config/: arm_mission.yaml  markers_tf.yaml  motion_target.yaml  rawm_param.yaml  usb_cam.yaml
cssd_gazebo/: CMakeLists.txt  package.xml
cssd_gazebo/CSSD Trolley/: model.config  model.sdf
cssd_gazebo/controller/: ur_position_controller.yaml  ur_velocity_controller.yaml
cssd_gazebo/launch/: controller_utils.launch  gazebo_editing_world.launch  main.launch  one_arm.launch  two_arms.launch  ur10_arm.launch  ur10_gazebo.launch  ur10e_arm.launch
cssd_gazebo/models/CSSD Shelf/: model.config  model.sdf
cssd_gazebo/models/CSSD Shelf/meshes/: Abdullah's rack.STL
cssd_gazebo/models/CSSD Tray/: model.config  model.sdf
cssd_gazebo/models/CSSD Tray 0/: model.config  model.sdf
cssd_gazebo/models/CSSD Tray 1/: model.config  model.sdf
cssd_gazebo/models/CSSD Tray 2/: model.config  model.sdf
cssd_gazebo/models/CSSD Tray 3/: model.config  model.sdf
cssd_gazebo/models/CSSD Tray/meshes/: Tray_Assem_Locating_Stand-off.STL  tray_pegs.stl
cssd_gazebo/models/CSSD Trolley/: model.config  model.sdf
cssd_gazebo/models/CssdShelf/: model.config  model.sdf
cssd_gazebo/models/CssdTray/: model.config  model.sdf
cssd_gazebo/models/CssdTray/meshes/: Tray_Assem_Locating_Stand-off.STL  tray_feet.stl
cssd_gazebo/models/CssdTray0/: model.config  model.sdf
cssd_gazebo/models/CssdTray1/: model.config  model.sdf
cssd_gazebo/models/CssdTray2/: model.config  model.sdf
cssd_gazebo/models/CssdTray3/: model.config  model.sdf
cssd_gazebo/models/CssdTray4/: model.config  model.sdf
cssd_gazebo/models/CssdTrolley/: model.config  model.sdf
cssd_gazebo/models/CssdTrolley/meshes/: Trolley_Abdullah_v2.STL
cssd_gazebo/models/MiR100/: model.config  model.sdf
cssd_gazebo/models/MiRCart/: model.config  model.sdf
cssd_gazebo/models/MiRCart/meshes/: cart.mtl
cssd_gazebo/models/MiRCartTrayPlacement/: model.config  model.sdf
cssd_gazebo/models/MiRCartWithTrayPlacement/: model.config  model.sdf
cssd_gazebo/models/UR10Base/: model.config  model.sdf
cssd_gazebo/models/UR10Base/meshes/: base.dae
cssd_gazebo/models/aruco_visual_marker_0/: model.sdf
cssd_gazebo/models/aruco_visual_marker_0/materials/scripts/: aruco_visual_marker_0_marker.material
cssd_gazebo/models/aruco_visual_marker_1/: model.sdf
cssd_gazebo/models/aruco_visual_marker_1/materials/scripts/: aruco_visual_marker_1_marker.material
cssd_gazebo/models/aruco_visual_marker_100/: model.config  model.sdf
cssd_gazebo/models/aruco_visual_marker_100/materials/scripts/: aruco_visual_marker_100_marker.material
cssd_gazebo/models/aruco_visual_marker_101/: model.config  model.sdf
cssd_gazebo/models/aruco_visual_marker_101/materials/scripts/: aruco_visual_marker_101_marker.material
cssd_gazebo/models/aruco_visual_marker_102/: model.config  model.sdf
cssd_gazebo/models/aruco_visual_marker_102/materials/scripts/: aruco_visual_marker_102_marker.material
cssd_gazebo/models/aruco_visual_marker_103/: model.config  model.sdf
cssd_gazebo/models/aruco_visual_marker_103/materials/scripts/: aruco_visual_marker_103_marker.material
cssd_gazebo/models/aruco_visual_marker_2/: model.sdf
cssd_gazebo/models/aruco_visual_marker_2/materials/scripts/: aruco_visual_marker_2_marker.material
cssd_gazebo/models/aruco_visual_marker_3/: model.sdf
cssd_gazebo/models/aruco_visual_marker_3/materials/scripts/: aruco_visual_marker_3_marker.material
cssd_gazebo/models/aruco_visual_marker_4/: model.sdf
cssd_gazebo/models/aruco_visual_marker_4/materials/scripts/: aruco_visual_marker_4_marker.material
cssd_gazebo/models/cssd_room/: model.config  model.sdf
cssd_gazebo/models/cssd_room/materials/scripts/: SimpleWall.material
cssd_gazebo/params/: cssd_pid_gains.yaml
cssd_gazebo/scripts/: gazebo_unpauser.py  initial_joint_command.py
cssd_gazebo/src/: warm_start.cpp
cssd_gazebo/worlds/: cssd.world  cssd_backup.world  cssd_two_arms.world  cssd_two_arms_backup.world  fiducial.world
cssd_hardware/: CMakeLists.txt  README.md  package.xml
cssd_hardware/config/: my_ur10e_calibration.yaml
cssd_hardware/launch/: single_arm.launch  single_arm_new.launch  two_arm.launch
cssd_ur_description/: CMakeLists.txt  package.xml
cssdbot_description/: CMakeLists.txt  package.xml  ur10.urd2f.xacro  ur10.urdf(final).xacro  ur10.urdf.xacro  ur103.urdf.xacro
cssdbot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
cssdbot_ur10_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
cssdbot_ur10e_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
documentations/: composed_aruco.odg
hanwha_controller/: CMakeLists.txt  README.md  package.xml
hanwha_controller/hanwha_scripts/: 10Dec2019.script  CSSD_YH01_SAM_191119.script  CSSD_YH01_SAM_201119.script  Hanwha_Socket_Control.script
hanwha_controller/include/hanwha_controller/: hanwha_arm_controller.hpp
hanwha_controller/src/: hanwha_arm_controller.cpp  main.cpp
include/: fiducial_markers_handler.hpp  robot_arm_controller.hpp  (+1 more)
robot_arm_workcell_manager/: CMakeLists.txt  package.xml
robot_arm_workcell_manager/config/: environment_object.yaml  markers_tf.yaml  motion_target.yaml  rawm_param.yaml  usb_cam.yaml
robot_arm_workcell_manager/include/: dispenser_workcell_adapter.hpp  fiducial_markers_handler.hpp  hanwha_arm_workcell_manager.hpp  robot_arm_controller.hpp  robot_arm_workcell_manager.hpp
robot_arm_workcell_manager/launch/: arm_controller.launch  demo.launch  fiducial_markers_handler.launch  hanwha_arm_workcell_manager.launch  main.launch  markers_detector.launch  robot_arm_workcell_manager.launch  two_arms_rawm.launch  two_arms_rviz.launch
robot_arm_workcell_manager/launch/test_launch/: fiducial_markers_handler.launch
robot_arm_workcell_manager/scripts/: README.md  request_item  test_arm.py
robot_arm_workcell_manager/src/: dispenser_workcell_adapter.cpp  fiducial_markers_handler.cpp  hanwha_arm_workcell_manager.cpp  robot_arm_controller.cpp  robot_arm_workcell_manager.cpp
(+106 files in other folders)
