<?xml version="1.0"?>
<package format="2">
  <name>cssd_hardware</name>
  <version>1.0.0</version>
  <description>
    Drivers, description, and utilities for Robot Arm Workcell Manipulation Workcell, Using moveit 
  </description>
  <maintainer email="tan_you_liang@hotmail.com">Tan You Liang</maintainer>
  <license>BSD</license>

  <depend>robot_arm_workcell_manager</depend>
  <depend>ur_modern_driver</depend>
  <depend>realsense2_camera</depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
