<?xml version="1.0"?>
<package format="2">
  <name>hanwha_controller</name>
  <version>0.0.0</version>
  <description>Hanwha controller for ros</description>
  <maintainer email="chart-rmf@gmail.com">chart-rmf</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

</package>
